@@ -11,7 +11,7 @@
 "pix/world.png" NULL "tkrat" "Tkrat"
 "pix/spider.png" NULL NULL "Netscape"
 "pix/apple.png" NULL NULL "Gimp"
-"pix/pawn.png" NULL NULL "X-Chat"
+"pix/pawn.png" NULL "xchat" "Xchat"
 "pix/pumpkin.png" "* Settings" NULL NULL
 "pix/tv2.png" NULL NULL "Xawtv"
 "pix/tv2.png" NULL NULL "Enlightenment_Pager"
