@@ -1692,3 +1692,14 @@ Sun Sep 12 10:49:14 PDT 1999
 (Raster)
 
 and use those snapshot values for the dialogs damnit... :)
+
+-------------------------------------------------------------------------------
+
+Sun Sep 12 12:29:12 PDT 1999
+(Raster)
+
+make xchat icondef correct
+
+dont remember everythign abotu every window ina group - just have every 
+window int hat group rememebr its in that group and otherwise remember the
+normal stuff.
